[package]
name = "carver"
authors = ["Matthew J Perez <matt@mperez.io>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mattjperez/carver"
description = "bug reducer"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
